✨ feat: 激活用户后保存活动并增加积分
