# docs/swagger.json
@@ -24,7 +24,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/schema.VerificationEmailReq"
+                            "$ref": "#/definitions/schema.VerifyEmailReq"
                         }
                     }
                 ],
@@ -40,7 +40,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/schema.VerificationEmailRes"
+                                            "$ref": "#/definitions/schema.VerifyEmailRes"
                                         }
                                     }
                                 }
@@ -126,22 +126,19 @@
                 "pass"
             ],
             "properties": {
-                "captcha_code": {
-                    "type": "string"
-                },
-                "captcha_id": {
-                    "type": "string"
-                },
                 "e_mail": {
+                    "description": "邮箱",
                     "type": "string",
                     "maxLength": 500
                 },
                 "name": {
+                    "description": "用户名",
                     "type": "string",
                     "maxLength": 30,
                     "minLength": 2
                 },
                 "pass": {
+                    "description": "密码",
                     "type": "string",
                     "maxLength": 32,
                     "minLength": 8
@@ -152,6 +149,7 @@
             "type": "object",
             "properties": {
                 "access_token": {
+                    "description": "访问令牌",
                     "type": "string"
                 },
                 "avatar": {
@@ -175,7 +173,7 @@
                 "id": {
                     "type": "integer"
                 },
-                "ip": {
+                "ipInfo": {
                     "description": "IP 地址",
                     "type": "string"
                 },
@@ -192,6 +190,7 @@
                     "type": "string"
                 },
                 "role_id": {
+                    "description": "角色 ID",
                     "type": "integer"
                 },
                 "status": {
@@ -210,15 +209,92 @@
                     "type": "string"
                 },
                 "visit_token": {
+                    "description": "访问令牌",
                     "type": "string"
                 }
             }
         },
-        "schema.VerificationEmailReq": {
-            "type": "object"
+        "schema.VerifyEmailReq": {
+            "type": "object",
+            "required": [
+                "code"
+            ],
+            "properties": {
+                "code": {
+                    "description": "验证码",
+                    "type": "string",
+                    "maxLength": 500
+                }
+            }
         },
-        "schema.VerificationEmailRes": {
-            "type": "object"
+        "schema.VerifyEmailRes": {
+            "type": "object",
+            "properties": {
+                "access_token": {
+                    "description": "访问令牌",
+                    "type": "string"
+                },
+                "avatar": {
+                    "description": "头像",
+                    "type": "string"
+                },
+                "createdAt": {
+                    "type": "integer"
+                },
+                "deletedAt": {
+                    "type": "integer"
+                },
+                "displayName": {
+                    "description": "昵称",
+                    "type": "string"
+                },
+                "email": {
+                    "description": "邮箱",
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "ipInfo": {
+                    "description": "IP 地址",
+                    "type": "string"
+                },
+                "lastLoginDate": {
+                    "description": "上次登录时间",
+                    "type": "integer"
+                },
+                "mailStatus": {
+                    "description": "邮箱状态",
+                    "type": "string"
+                },
+                "password": {
+                    "description": "密码",
+                    "type": "string"
+                },
+                "role_id": {
+                    "description": "角色 ID",
+                    "type": "integer"
+                },
+                "status": {
+                    "description": "用户状态",
+                    "type": "string"
+                },
+                "suspendedAt": {
+                    "description": "被禁言的时间",
+                    "type": "integer"
+                },
+                "updatedAt": {
+                    "type": "integer"
+                },
+                "username": {
+                    "description": "用户名",
+                    "type": "string"
+                },
+                "visit_token": {
+                    "description": "访问令牌",
+                    "type": "string"
+                }
+            }
         }
     }
 }
